Add the DSL fan-out width setting and gate inputs
Registers dsl.query.max_parallel_sub_plans (SC-1, default 1, maximum 2
enforced in the Setting itself so an out-of-range PUT is rejected with
a 400 rather than clamped downstream), and DslGateInputs (SC-9), the
reader that supplies the fan-out gate terms without duplicating the
owning plugins' defaults.

Ported from 1c68b29b0af with dsl.query.enabled deliberately dropped.
This branch already owns the interception gate as
SearchActionFilter.INTERCEPT_SEARCH_ENABLED
("dsl.query_executor.intercept_search.enabled", default false), so a
second master switch would be two keys for one behaviour and a
half-working operator rollback. getSettings() therefore returns the
existing gate plus the new width knob; both descriptors are asserted
by identity because addSettingsUpdateConsumer rejects a key-equal
copy.

DslGateInputs reads the multiplier by descriptor rather than
hardcoding it, drops the gate term when the value is absent or
non-positive (never clamping it to 1, which would silently narrow the
fan-out), and mirrors the backend's target_partitions derivation with
a drift test pinning the two against each other.

The two settings-lever integration tests from the source commit
(DslQuerySettingsIT, DslQuerySettingsRestIT) are not ported: most of
their assertions covered the dropped lever, and neither runs in this
branch's unit-test gate.

Signed-off-by: Shashank Gupta <shshgup@amazon.com>